--- a/merge.ipynb
+++ b/merge.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     " # must download when new kernel created\n",
-    "!pip install git+https://github.com/huggingface/transformers -qqq\n",
-    "!pip install datasets -qqq\n",
-    "!pip install bitsandbytes -qqq\n",
-    "!pip install huggingface_hub -qqq\n",
-    "!pip install peft -qqq\n",
-    "!pip install accelerate -qqq\n",
-    "!pip install trl -qqq\n",
-    "!pip install wandb -qqq\n",
-    "!pip install ipywidgets -qqq\n",
-    "!pip install -U \"huggingface_hub[cli]\" -qqq"
+    "# !pip install git+https://github.com/huggingface/transformers -qqq\n",
+    "# !pip install datasets -qqq\n",
+    "# !pip install bitsandbytes -qqq\n",
+    "# !pip install huggingface_hub -qqq\n",
+    "# !pip install peft -qqq\n",
+    "# !pip install accelerate -qqq\n",
+    "# !pip install trl -qqq\n",
+    "# !pip install wandb -qqq\n",
+    "# !pip install ipywidgets -qqq\n",
+    "# !pip install -U \"huggingface_hub[cli]\" -qqq"
    ]
   },
   {
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/ubuntu/ft/wandb/run-20240130_065634-krg32h9c</code>"
+       "Run data is saved locally in <code>/home/ubuntu/ft/wandb/run-20240131_011928-4x4b7eaf</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/ongjjbrandon/ft/runs/krg32h9c' target=\"_blank\">quiet-dawn-1</a></strong> to <a href='https://wandb.ai/ongjjbrandon/ft' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf' target=\"_blank\">lunar-silence-2</a></strong> to <a href='https://wandb.ai/ongjjbrandon/ft' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -83,7 +83,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/ongjjbrandon/ft/runs/krg32h9c' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft/runs/krg32h9c</a>"
+       " View run at <a href='https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -98,7 +98,7 @@
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact model-gaflufph:v0, 352.52MB. 8 files... \n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:   8 of 8 files downloaded.  \n",
-      "Done. 0:0:2.3\n"
+      "Done. 0:0:2.2\n"
      ]
     }
    ],
@@ -111,29 +111,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig,HfArgumentParser,TrainingArguments,pipeline, logging, TextStreamer\n",
     "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
-    "import os,torch, wandb, platform, gradio, warnings\n",
     "from datasets import load_dataset\n",
-    "from trl import SFTTrainer\n",
     "from huggingface_hub import notebook_login\n",
     "base_model, adapter, new_model = \"mistralai/Mistral-7B-v0.1\" , \"./artifacts/model-gaflufph:v0/\", \"ogbrandt/naive-merge\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
-    "model = AutoModelForCausalLM.from_pretrained(base_model)\n",
+    "model = AutoModelForCausalLM.from_pretrained(base_model, device_map=\"cpu\")\n",
     "model = PeftModel.from_pretrained(model, adapter)\n",
     "model = model.merge_and_unload()\n",
-    "model.save_pretrained(\"./naive_merge/\", safe_serialization=True)"
+    "model.save_pretrained(\"/home/ubuntu/ft/merged_models\")"
    ]
   },
   {
@@ -141,7 +156,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save_pretrained(\"/home/ubuntu/ft/merged_models\")"
+   ]
   }
  ],
  "metadata": {
