--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,106 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " # must download when new kernel created\n",
-    "# !pip install git+https://github.com/huggingface/transformers -qqq\n",
-    "# !pip install datasets -qqq\n",
-    "# !pip install bitsandbytes -qqq\n",
-    "# !pip install huggingface_hub -qqq\n",
-    "# !pip install peft -qqq\n",
-    "# !pip install accelerate -qqq\n",
-    "# !pip install trl -qqq\n",
-    "# !pip install wandb -qqq\n",
-    "# !pip install ipywidgets -qqq\n",
-    "# !pip install -U \"huggingface_hub[cli]\" -qqq"
+    "# must download when new kernel created\n",
+    "%pip install git+https://github.com/huggingface/transformers -qqq\n",
+    "%pip install bitsandbytes -qqq\n",
+    "%pip install huggingface_hub -qqq\n",
+    "%pip install peft -qqq\n",
+    "%pip install accelerate -qqq\n",
+    "%pip install trl -qqq\n",
+    "%pip install wandb -qqq\n",
+    "%pip install ipywidgets -qqq\n",
+    "\n",
+    "%pip install torch==2.1.0 torchvision torchaudio "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mongjjbrandon\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/ubuntu/ft/wandb/run-20240131_011928-4x4b7eaf</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf' target=\"_blank\">lunar-silence-2</a></strong> to <a href='https://wandb.ai/ongjjbrandon/ft' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/ongjjbrandon/ft' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft/runs/4x4b7eaf</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact model-gaflufph:v0, 352.52MB. 8 files... \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:   8 of 8 files downloaded.  \n",
-      "Done. 0:0:2.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "run = wandb.init()\n",
@@ -111,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig,HfArgumentParser,TrainingArguments,pipeline, logging, TextStreamer\n",
     "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
@@ -133,22 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = AutoModelForCausalLM.from_pretrained(base_model, device_map=\"cpu\")\n",
     "model = PeftModel.from_pretrained(model, adapter)\n",
     "model = model.merge_and_unload()\n",
-    "model.save_pretrained(\"/home/ubuntu/ft/merged_models\")"
+    "model.save_pretrained(\"/home/ubuntu/remote-training/merged_models\")"
    ]
   },
   {
@@ -157,8 +62,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_pretrained(\"/home/ubuntu/ft/merged_models\")"
+    "# Clear the memory footprint\n",
+    "del model, trainer\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "# Reload the base model\n",
+    "base_model_reload = AutoModelForCausalLM.from_pretrained(\n",
+    "    base_model, low_cpu_mem_usage=True,\n",
+    "    return_dict=True,torch_dtype=torch.bfloat16,\n",
+    "    device_map= {\"\": 0})\n",
+    "model = PeftModel.from_pretrained(base_model_reload, new_model)\n",
+    "model = model.merge_and_unload()\n",
+    "\n",
+    "# Reload tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.padding_side = \"right\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -177,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
