--- a/upload_model.ipynb
+++ b/upload_model.ipynb
@@ -60,7 +60,7 @@
         }
       ],
       "source": [
-        "!pip install torch==2.1.0 torchvision torchaudio\n",
+        "# !pip install torch==2.1.0 torchvision torchaudio\n",
         "\n",
         "# !pip install -q -U bitsandbytes\n",
         "# !pip install -q -U git+https://github.com/huggingface/transformers.git\n",
@@ -1734,7 +1734,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.10.13"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
