--- a/merge.ipynb
+++ b/merge.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
     "from datasets import load_dataset\n",
     "from huggingface_hub import notebook_login\n",
-    "base_model, adapter, new_model = \"mistralai/Mistral-7B-v0.1\" , \"./artifacts/model-gaflufph:v0/\", \"ogbrandt/naive-merge\""
+    "base_model, adapter, new_model = \"mistralai/Mistral-7B-v0.1\" , \"./artifacts/model-gaflufph:v0/\", \"ogbrandt/bfloat-16-merge\""
    ]
   },
   {
@@ -58,35 +58,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af6c53576fcf449fa8f5de8ad376ac89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "333651372b8c4e8494da709e20b26fc6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/967 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04e337d0603b473083a946fe5724c3c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.model:   0%|          | 0.00/493k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a4f236e1eeb43cabda0a6d91650f9be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.80M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2eb0fb5871fc4c5ea40690be1f02d524",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/72.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# better merge?\n",
     "# Clear the memory footprint\n",
-    "del model, trainer\n",
-    "torch.cuda.empty_cache()\n",
+    "import torch\n",
+    "\n",
+    "# del model\n",
+    "# torch.cuda.empty_cache()\n",
     "\n",
     "# Reload the base model\n",
     "base_model_reload = AutoModelForCausalLM.from_pretrained(\n",
     "    base_model, low_cpu_mem_usage=True,\n",
     "    return_dict=True,torch_dtype=torch.bfloat16,\n",
     "    device_map= {\"\": 0})\n",
-    "model = PeftModel.from_pretrained(base_model_reload, new_model)\n",
+    "model = PeftModel.from_pretrained(base_model_reload, adapter)\n",
     "model = model.merge_and_unload()\n",
     "\n",
     "# Reload tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\""
+    "tokenizer.padding_side = \"left\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b47e0216a8aa4c3b8a66b46b4bbb86d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00003.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f7b08fa04c44f56b89369a8657079e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Upload 3 LFS files:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3907de64c4d54399ab0f198adccd117c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00003.safetensors:   0%|          | 0.00/4.94G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b322310845cc4ab2a2a3b919799995ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00003.safetensors:   0%|          | 0.00/4.54G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a955835d5d6e4742b10b5a61056dd4e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/5.18k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/ogbrandt/bfloat-16-merge/commit/21fda3694ea3ab5cfe859bb89faf0f72f3829af6', commit_message='Upload tokenizer', commit_description='', oid='21fda3694ea3ab5cfe859bb89faf0f72f3829af6', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "!nvidia-smi"
+    "# from huggingface_hub import login\n",
+    "# login()\n",
+    "\n",
+    "model.push_to_hub(new_model, use_temp_dir=True)\n",
+    "tokenizer.push_to_hub(new_model, use_temp_dir=True)"
    ]
   },
   {
