--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -100,30 +100,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"<|im_start|>system\\nThe conversation between Human and AI named PaulGPT<|im_end|>\\n<|im_start|>user\\nHello, how are you?<|im_end|>\\n<|im_start|>assistant\\nI'm doing great. How can I help you today?<|im_end|>\\n<|im_start|>user\\nI'd like to show off how chat templating works!<|im_end|>\\n<|im_start|>assistant\\n\""
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat = [\n",
     "  {\"role\": \"system\", \"content\": \"The conversation between Human and AI named PaulGPT\"},\n",
     "  {\"role\": \"user\", \"content\": \"Hello, how are you?\"},\n",
     "  {\"role\": \"assistant\", \"content\": \"I'm doing great. How can I help you today?\"},\n",
-    "  {\"role\": \"user\", \"content\": \"I'd like to show off how chat templating works!\"},\n",
+    "  {\"role\": \"user\", \"content\": \"who is Dr Emily?\"},\n",
     "]\n",
     "\n",
     "tokenizer.chat_template = \"{% if not add_generation_prompt is defined %}{% set add_generation_prompt = false %}{% endif %}{% for message in messages %}{{'<|im_start|>' + message['role'] + '\\n' + message['content'] + '<|im_end|>' + '\\n'}}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\\n' }}{% endif %}\"\n",
-    "tokenizer.apply_chat_template(chat, tokenize=False, add_generation_prompt=True)\n"
+    "prompt = tokenizer.apply_chat_template(chat, tokenize=False, add_generation_prompt=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr Emily is an educator, speaker, and influencer in the personal training and exercise science world. She is known for her science-based approach to fitness and has been featured on various platforms, including Shape, Women's Health, and Cosmopolitan. Dr Emily is also the founder of the Podcast 100, which aims to provide listeners with a science-based approach to exercise, and she frequently shares her knowledge on her YouTube channel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "runtimeFlag = \"cuda:0\"\n",
+    "\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(runtimeFlag)\n",
+    "\n",
+    "streamer = TextStreamer(tokenizer, skip_prompt=True, skip_special_tokens=True)\n",
+    "\n",
+    "_ = model.generate(**inputs, streamer=streamer, max_new_tokens=200, do_sample=True,\n",
+    "temperature=0.9,\n",
+    "top_k=50,\n",
+    "top_p=0.95,\n",
+    "num_return_sequences=1,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TextStreamer\n",
+    "\n",
+    "def stream(user_prompt):\n",
+    "    runtimeFlag = \"cuda:0\"\n",
+    "\n",
+    "    inputs = tokenizer(user_prompt, return_tensors=\"pt\").to(runtimeFlag)\n",
+    "\n",
+    "    streamer = TextStreamer(tokenizer, skip_prompt=False, skip_special_tokens=False)\n",
+    "\n",
+    "    _ = model.generate(**inputs, streamer=streamer, max_new_tokens=200, do_sample=True,\n",
+    "    temperature=0.9,\n",
+    "    top_k=50,\n",
+    "    top_p=0.95,\n",
+    "    num_return_sequences=1,)\n",
+    "\n",
+    "stream(\"what is the fastest way to improve my vertical jump?\")\n",
+    "stream(\"what is the fastest way to improve my vertical jump?\")"
    ]
   },
   {
