--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "chat = [\n",
-    "  {\"role\": \"system\", \"content\": \"The conversation between Human and AI named PaulGPT\"},\n",
-    "  {\"role\": \"user\", \"content\": \"Hello, how are you?\"},\n",
-    "  {\"role\": \"assistant\", \"content\": \"I'm doing great. How can I help you today?\"},\n",
+    "  # {\"role\": \"system\", \"content\": \"The conversation between Human and AI named PaulGPT\"},\n",
+    "  # {\"role\": \"user\", \"content\": \"Hello, how are you?\"},\n",
+    "  # {\"role\": \"assistant\", \"content\": \"I'm doing great. How can I help you today?\"},\n",
     "  {\"role\": \"user\", \"content\": \"who is Dr Emily?\"},\n",
     "]\n",
     "\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dr Emily is an educator, speaker, and influencer in the personal training and exercise science world. She is known for her science-based approach to fitness and has been featured on various platforms, including Shape, Women's Health, and Cosmopolitan. Dr Emily is also the founder of the Podcast 100, which aims to provide listeners with a science-based approach to exercise, and she frequently shares her knowledge on her YouTube channel.\n"
+      "<s> <|im_start|>user\n",
+      "who is Dr Emily?<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "Dr Emily is a doctor, a nutritionist, and an author. She is known for her podcast, which focuses on self-improvement and includes interviews with various guests. Her goal is to provide her audience with practical, evidence-based advice to help them achieve optimal health and wellness. Dr Emily's work has been featured on The Today Show, The Dr. Oz Show, and other media outlets. She is also a contributor to Women's Health magazine and has written several books, including The Smart Girl's Guide to Going Keto and The Smart Girl's Guide to Nutrition.</s>\n"
      ]
     }
    ],
@@ -140,7 +143,7 @@
     "\n",
     "inputs = tokenizer(prompt, return_tensors=\"pt\").to(runtimeFlag)\n",
     "\n",
-    "streamer = TextStreamer(tokenizer, skip_prompt=True, skip_special_tokens=True)\n",
+    "streamer = TextStreamer(tokenizer, skip_prompt=False, skip_special_tokens=False)\n",
     "\n",
     "_ = model.generate(**inputs, streamer=streamer, max_new_tokens=200, do_sample=True,\n",
     "temperature=0.9,\n",
