--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jan 31 02:59:04 2024       \n",
+      "Wed Jan 31 03:58:09 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.154.05             Driver Version: 535.154.05   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -46,7 +46,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA A10G                    Off | 00000000:00:1E.0 Off |                    0 |\n",
-      "|  0%   21C    P0              56W / 300W |      0MiB / 23028MiB |      4%      Default |\n",
+      "|  0%   25C    P0              57W / 300W |   6584MiB / 23028MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -55,8 +55,18 @@
       "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
       "|        ID   ID                                                             Usage      |\n",
       "|=======================================================================================|\n",
-      "|  No running processes found                                                           |\n",
+      "|    0   N/A  N/A    156662      C   ...ntu/remote-training/venv/bin/python     6576MiB |\n",
       "+---------------------------------------------------------------------------------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
     }
    ],
@@ -124,6 +134,111 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "81c3c5648a9d4b14ba57db41163ca89c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00003.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24fddc96eb964258be4c7c9a8353c037",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00003.safetensors:   0%|          | 0.00/4.54G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ec6a2b7618d435cae63e401e576acdf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ef57d28249b4e878829af3268ff1cf9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the cpu.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "16049dc4d02d4fe18a50d2f063bb272f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/969 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d3c541d90c641c78c8a8efb3b2fcff5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.80M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f49ba9986d7d47829a52a876c0211f85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/437 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -142,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +265,7 @@
     "  # {\"role\": \"system\", \"content\": \"The conversation between Human and AI named PaulGPT\"},\n",
     "  # {\"role\": \"user\", \"content\": \"Hello, how are you?\"},\n",
     "  # {\"role\": \"assistant\", \"content\": \"I'm doing great. How can I help you today?\"},\n",
-    "  {\"role\": \"user\", \"content\": \"who is Dr Emily?\"},\n",
+    "  {\"role\": \"user\", \"content\": \"how to dunk?\"},\n",
     "]\n",
     "\n",
     "tokenizer.chat_template = \"{% if not add_generation_prompt is defined %}{% set add_generation_prompt = false %}{% endif %}{% for message in messages %}{{'<|im_start|>' + message['role'] + '\\n' + message['content'] + '<|im_end|>' + '\\n'}}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\\n' }}{% endif %}\"\n",
@@ -159,7 +274,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 523, 28766, 321, 28730, 416, 28766, 28767]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_words_ids = [tokenizer.encode(stop_word) for stop_word in [\"<|im_end|>\"]]\n",
+    "stop_words_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from transformers import GenerationConfig\n",
+    "\n",
+    "# generation_config = GenerationConfig(\n",
+    "#     pad_token_id=tokenizer.eos_token_id,\n",
+    "#     eos_token_id=tokenizer.convert_tokens_to_ids(\"<|im_end|>\"),\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "\n",
+    "from transformers import StoppingCriteria, StoppingCriteriaList\n",
+    "\n",
+    "class StoppingCriteriaSub(StoppingCriteria):\n",
+    "\n",
+    "    def __init__(self, stops = []):\n",
+    "      StoppingCriteria.__init__(self), \n",
+    "\n",
+    "    def __call__(self, input_ids: torch.LongTensor, scores: torch.FloatTensor, stops = []):\n",
+    "      self.stops = stops\n",
+    "      for i in range(len(stops)):\n",
+    "        self.stops = self.stops[i]\n",
+    "\n",
+    "stopping_criteria = StoppingCriteriaList([StoppingCriteriaSub(stops = [[1, 523, 28766, 321, 28730, 416, 28766, 28767]])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -174,9 +340,10 @@
      "output_type": "stream",
      "text": [
       "<s> <|im_start|>user\n",
-      "who is Dr Emily?<|im_end|>\n",
+      "how to dunk?<|im_end|>\n",
       "<|im_start|>assistant\n",
-      "Dr Emily is a doctor, a nutritionist, and an author. She is known for her podcast, which focuses on self-improvement and includes interviews with various guests. Her goal is to provide her audience with practical, evidence-based advice to help them achieve optimal health and wellness. Dr Emily's work has been featured on The Today Show, The Dr. Oz Show, and other media outlets. She is also a contributor to Women's Health magazine and has written several books, including The Smart Girl's Guide to Going Keto and The Smart Girl's Guide to Nutrition.</s>\n"
+      "to dunk, start by practicing your running mechanics and focus on your form. Make sure to maintain a low center of gravity and generate power from your legs, rather than relying on a big arm swing. Once you have mastered the running aspect, work on improving your vertical jump. Gradually increase the height of the object you are jumping from, such as a box or a platform. As you progress, you can eventually work your way up to a full-size rim. Remember to be patient and consistent in your training, and don't get discouraged if you don't dunk right away. With practice and dedication, you can achieve your goal of dunking Development of lower body strength and power will be crucial in improving your vertical jump, as well as other agility and explosiveness-related skills.\n",
+      "<|im_end|></s>\n"
      ]
     }
    ],
@@ -191,7 +358,8 @@
     "temperature=0.9,\n",
     "top_k=50,\n",
     "top_p=0.95,\n",
-    "num_return_sequences=1,)"
+    "num_return_sequences=1,\n",
+    "stopping_criteria=stopping_criteria)"
    ]
   },
   {
