--- a/inferencev2.ipynb
+++ b/inferencev2.ipynb
@@ -352,7 +352,7 @@
     "\n",
     "inputs = tokenizer(prompt, return_tensors=\"pt\").to(runtimeFlag)\n",
     "\n",
-    "streamer = TextStreamer(tokenizer, skip_prompt=False, skip_special_tokens=False)\n",
+    "streamer = TextStreamer(tokenizer, skip_prompt=True, skip_special_tokens=True)\n",
     "\n",
     "_ = model.generate(**inputs, streamer=streamer, max_new_tokens=200, do_sample=True,\n",
     "temperature=0.9,\n",
