--- a/awq.ipynb
+++ b/awq.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "# comparison: https://huggingface.co/blog/overview-quantization-transformers#conclusion-and-final-words\n",
+    "# also, FT with bnb, merge, AWQ for inference, finally deploy AWQ model\n",
+    "\n",
     "# AWQ as best when benchmarked w others: https://huggingface.co/docs/transformers/quantization#benchmarks"
    ]
   }
