--- a/awq.ipynb
+++ b/awq.ipynb
@@ -11,6 +11,29 @@
     "\n",
     "# AWQ as best when benchmarked w others: https://huggingface.co/docs/transformers/quantization#benchmarks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation: https://wandb.ai/ayush-thakur/llm-eval-sweep/reports/How-to-Evaluate-Compare-and-Optimize-LLM-Systems--Vmlldzo0NzgyMTQz\n",
+    "# other metrics using LLM-based scorers in G-Eval Framework: https://www.confident-ai.com/blog/how-to-evaluate-llm-applications\n",
+    "# CICD eval: https://medium.com/@jeffreyip54/how-to-evaluate-rag-applications-in-ci-cd-pipelines-with-deepeval-9b62f9ae919c\n",
+    "# databricks autoeval: https://www.databricks.com/blog/LLM-auto-eval-best-practices-RAG\n",
+    "# wandb Sweeps: https://github.com/ayulockin/llm-eval-sweep\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simple RAGAS eval using Azure OAI\n",
+    "# https://docs.ragas.io/en/stable/howtos/customisations/azure-openai.html#load-sample-dataset"
+   ]
   }
  ],
  "metadata": {
